Fix style for screen header on smaller screen

--- a/src/components/ScreenHeader/style.css
+++ b/src/components/ScreenHeader/style.css
@@ -109,6 +109,12 @@
   width: 100%;
 }
 
+@media only screen and (max-width: 320px) {
+  .screen-header-items-container {
+    padding-bottom: 9px;
+  }
+}
+
 /*background_colors*/
 
 .light-blue {
